--- a/app/src/main/res/layout/level_1_page_01.xml
+++ b/app/src/main/res/layout/level_1_page_01.xml
@@ -26,18 +26,20 @@
             android:text="Предыстория"
             foo:customFont="runic.ttf"
             />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="\n \t В начале времен не были в мире ни песка, ни моря, ни волн холодных; земли еще не было, не было небосвода. И только зияла огромная черная бездна ГИНУНГАГАП, или Мировая бездна. К северу от нее был Нифльхейм, Темный мир. Оттуда шел холод и свирепая непогода. А к югу от Мировой бездны располагался мир жара и огня Муспелльхейм. С севера Мировая бездна заполнялась льдом и инеем, а с юга в нее залетали искры из Муспелльхейма. Когда же иней и теплый воздух встретились, иней стал таять, и капли, стекавшие вниз, породили первое существо - великана Имира.
+
+            <TextView
+                android:id="@+id/tv_1_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:text="\n \t В начале времен не были в мире ни песка, ни моря, ни волн холодных; земли еще не было, не было небосвода. И только зияла огромная черная бездна ГИНУНГАГАП, или Мировая бездна. К северу от нее был Нифльхейм, Темный мир. Оттуда шел холод и свирепая непогода. А к югу от Мировой бездны располагался мир жара и огня Муспелльхейм. С севера Мировая бездна заполнялась льдом и инеем, а с юга в нее залетали искры из Муспелльхейма. Когда же иней и теплый воздух встретились, иней стал таять, и капли, стекавшие вниз, породили первое существо - великана Имира.
     \n \t Но стоит отметить, что по древнескандинавским поверьям Огненные великаны были раньше Имира, однако именно из тела Имира и был сотворен мир. Возможно поэтому в разных писаниях Имира называют первым существом, древним прародителем всех.
     "
-            android:textAlignment="viewStart"
-            android:textAllCaps="false" />
+                android:textAlignment="viewStart"
+                android:textAllCaps="false" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
